--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Sicor</string>
+    <string name="Login_Email">Email</string>
+    <string name="password_login">Password</string>
+    <string name="btn_login">LOGIN TO ACCOUNT</string>
 </resources>
