--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,12 @@
     <string name="chip_low">Low</string>
     <string name="chip_Medium">Medium</string>
     <string name="chip_high">High</string>
+    <string name="bottom_home_text">home</string>
+    <string name="bottom_notification_texr">Notificacion</string>
+    <string name="bottom_ac_text">Account</string>
+    <string name="btn_homce_text">Home</string>
+    <string name="btn_bottom_navigation">Home</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
