--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,21 @@
 <resources>
     <string name="app_name">Sicor</string>
-    <string name="Login_Email">Email</string>
+    <string name="Login_Email">E-mail</string>
     <string name="password_login">Password</string>
-    <string name="btn_login">LOGIN TO ACCOUNT</string>
+    <string name="btn_login">Log in</string>
     <string name="action_search">Search</string>
-    <string name="action_setting">Account Settings</string>
+    <string name="action_setting">Account settings</string>
     <string name="action_logout">Logout</string>
-    <string name="btn_register_2">Already have an Account</string>
-    <string name="btn_register">Create new Account</string>
-    <string name="reg_confirm_password">Confirm Password</string>
-    <string name="text_of_btn_setup">SAVE ACCOUNT SETTINGS</string>
-    <string name="post_hint">Add Description</string>
+    <string name="btn_register_2">Sign in</string>
+    <string name="btn_register">Create account</string>
+    <string name="reg_confirm_password">Confirm password</string>
+    <string name="text_of_btn_setup">Save account settings</string>
+    <string name="post_hint">Add description</string>
     <string name="TextView_post">Danger:</string>
     <string name="chip_low">Low</string>
     <string name="chip_Medium">Medium</string>
     <string name="chip_high">High</string>
-    <string name="bottom_home_text">home</string>
+    <string name="bottom_home_text">Home</string>
     <string name="bottom_notification_texr">Notificacion</string>
     <string name="bottom_ac_text">Account</string>
     <string name="btn_homce_text">Home</string>
@@ -23,4 +23,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="sign_up_for_sicor">Sign Up for Sicor</string>
+    <string name="are_you_new_here_create_an_account">Are you new here? Create an account!</string>
 </resources>
