--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,8 @@
     <string name="btn_register">Create account</string>
     <string name="reg_confirm_password">Confirm password</string>
     <string name="text_of_btn_setup">Save account settings</string>
-    <string name="post_hint">Add description</string>
-    <string name="TextView_post">Danger:</string>
+    <string name="post_hint">Add a title</string>
+    <string name="TextView_post">Risk level:</string>
     <string name="chip_low">Low</string>
     <string name="chip_Medium">Medium</string>
     <string name="chip_high">High</string>
@@ -25,4 +25,5 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sign_up_for_sicor">Sign Up for Sicor</string>
     <string name="are_you_new_here_create_an_account">Are you new here? Create an account!</string>
+    <string name="enter_a_description">Enter a description</string>
 </resources>
