Ya almacena la descripcion

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="post_date">Post date</string>
     <string name="high">High</string>
     <string name="username">Username</string>
+    <string name="lorem">Lorem ipsum dolor sit amet regione urbanitas vis qui elit populo ut</string>
 </resources>
